--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,10 +39,10 @@ dependencies {
     implementation 'com.squareup.okhttp3:logging-interceptor:4.5.0'
 
     //coroutines
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines:1.3.5'
-    implementation 'org.jetbrains.kotlinx:kotlinx-android:1.3.5'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.0'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.0'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.5.0-alpha05'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1'
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1"
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
